refactoring data source controller and implementing routing database connections